Opened 14 years ago

Closed 14 years ago

#1167 closed defect (fixed)

asf to avi: Application provided invalid, non monotonically

Reported by: ami_stuff Owned by:
Priority: important Component: undetermined
Version: git-master Keywords: av_interleaved_write_frame regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

C:\>ffmpeg -i j.asf out.avi
ffmpeg version N-39492-gae3ee72 Copyright (c) 2000-2012 the FFmpeg developers
  built on Apr  4 2012 02:19:52 with gcc 4.5.0 20100414 (Fedora MinGW 4.5.0-1.fc
14)
  configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-w32threads --enable-memalign-hack --enable-runtime-cpudetect
--enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -
lwinmm' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snapshots/buil
d/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/snapshots/b
uild/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3 --enable-n
onfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-libvorbis
--enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-libopencor
e-amrwb --enable-libmp3lame --enable-libvpx --disable-decoder=libvpx
  libavutil      51. 44.100 / 51. 44.100
  libavcodec     54. 12.100 / 54. 12.100
  libavformat    54.  3.100 / 54.  3.100
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 66.101 /  2. 66.101
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 10.100 /  0. 10.100
  libpostproc    52.  0.100 / 52.  0.100
Input #0, asf, from 'j.asf':
  Duration: 00:00:41.36, start: 0.000000, bitrate: 100 kb/s
    Stream #0:0: Audio: wmav2 (a[1][0][0] / 0x0161), 16000 Hz, 1 channels, s16,
16 kb/s
    Stream #0:1: Video: msmpeg4 (MP43 / 0x3334504D), yuv420p, 192x144, 25 tbr, 1
k tbn, 1k tbc
w:192 h:144 pixfmt:yuv420p tb:1/1000000 sar:0/1 sws_param:flags=2
Output #0, avi, to 'out.avi':
  Metadata:
    ISFT            : Lavf54.3.100
    Stream #0:0: Video: mpeg4 (FMP4 / 0x34504D46), yuv420p, 192x144, q=2-31, 200
 kb/s, 25 tbn, 25 tbc
    Stream #0:1: Audio: mp3 (U[0][0][0] / 0x0055), 16000 Hz, 1 channels, s16
Stream mapping:
  Stream #0:1 -> #0:0 (msmpeg4 -> mpeg4)
  Stream #0:0 -> #0:1 (wmav2 -> libmp3lame)
Press [q] to stop, [?] for help
[avi @ 0x2376020] Application provided invalid, non monotonically increasing dts
 to muxer in stream 1: 7 >= 6
av_interleaved_write_frame(): Invalid argument

Attachments (1)

j.asf (509.8 KB ) - added by ami_stuff 14 years ago.

Download all attachments as: .zip

Change History (4)

by ami_stuff, 14 years ago

Attachment: j.asf added

comment:1 by ami_stuff, 14 years ago

also:

C:\>ffmpeg -i j.asf out.wma
ffmpeg version N-39492-gae3ee72 Copyright (c) 2000-2012 the FFmpeg developers
  built on Apr  4 2012 02:19:52 with gcc 4.5.0 20100414 (Fedora MinGW 4.5.0-1.fc
14)
  configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-w32threads --enable-memalign-hack --enable-runtime-cpudetect
--enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -
lwinmm' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snapshots/buil
d/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/snapshots/b
uild/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3 --enable-n
onfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-libvorbis
--enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-libopencor
e-amrwb --enable-libmp3lame --enable-libvpx --disable-decoder=libvpx
  libavutil      51. 44.100 / 51. 44.100
  libavcodec     54. 12.100 / 54. 12.100
  libavformat    54.  3.100 / 54.  3.100
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 66.101 /  2. 66.101
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 10.100 /  0. 10.100
  libpostproc    52.  0.100 / 52.  0.100
Input #0, asf, from 'j.asf':
  Duration: 00:00:41.36, start: 0.000000, bitrate: 100 kb/s
    Stream #0:0: Audio: wmav2 (a[1][0][0] / 0x0161), 16000 Hz, 1 channels, s16,
16 kb/s
    Stream #0:1: Video: msmpeg4 (MP43 / 0x3334504D), yuv420p, 192x144, 25 tbr, 1
k tbn, 1k tbc
w:192 h:144 pixfmt:yuv420p tb:1/1000000 sar:0/1 sws_param:flags=2
Output #0, asf, to 'out.wma':
  Metadata:
    WM/EncodingSettings: Lavf54.3.100
    Stream #0:0: Video: msmpeg4 (MP43 / 0x3334504D), yuv420p, 192x144, q=2-31, 2
00 kb/s, 1k tbn, 25 tbc
    Stream #0:1: Audio: wmav2 (a[1][0][0] / 0x0161), 16000 Hz, 1 channels, s16,
128 kb/s
Stream mapping:
  Stream #0:1 -> #0:0 (msmpeg4 -> msmpeg4)
  Stream #0:0 -> #0:1 (wmav2 -> wmav2)
Press [q] to stop, [?] for help
[asf @ 0x2376020] Application provided invalid, non monotonically increasing dts
 to muxer in stream 1: 282 >= 250
av_interleaved_write_frame(): Invalid argument

comment:2 by Carl Eugen Hoyos, 14 years ago

Keywords: av_interleaved_write_frame regression added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Encoder-related regression since "update to AVCodec.encode2()"

comment:3 by Carl Eugen Hoyos, 14 years ago

Resolution: fixed
Status: openclosed

A work-around for this sample was applied by Michael.

Note: See TracTickets for help on using tickets.